[tool.poetry]
name = "image-coloring"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
opencv-python = "^4.5.3"
numpy = "^1.22.0"
Flask = "^2.2.5"
Pillow = "^10.2.0"
requests = "^2.31.0"
Flask-Cors = "^3.0.10"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
